axxx apv : added deployment props & doc